[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
chrono = "0.4.23"
futures = { version = "0.3.25", features = ["thread-pool"] }
hello-world-derive = { path = "hello-world-derive" }
rand = "0.8.5"
redis = { version = "0.22.1", features = ["tokio-comp"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.22.0", features = ["full", ] }
tokio-util = { version = "0.7.4", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16" }
