[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.5"
chrono = "0.4"
futures = { version = "0.3", features = ["thread-pool"] }
hello-world-derive = { path = "hello-world-derive" }
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3" }
